<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MemoryDev</string>
    <string name="action_settings">Settings</string>
    <string name="NomLogo">Devcode.la</string>
    <string name="Descripcion"></string>
    <string name="boton1">Boton1</string>
    <string name="on">Encendido</string>
    <string name="off">Apagado</string>
    <string name="NomTiempo">Tiempo</string>
    <string name="NomJugar">Jugar</string>
    <string name="NomContador">00</string>
    <string name="NomSalir">Salir</string>
    
    
</resources>
